--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>projecttimebookingapp</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.3.4.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
