--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>spring-security-core</artifactId>
             <version>5.3.4.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>2.2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
