--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "name": "projectbookingapp",
-  "description": "Minimal Agency Customer Relationship Management Demo APP",
+  "description": "",
   "website": "",
   "env": {
     "TOKEN_SECRET": {
-      "description": "A secret key for verifying the integrity of JWT.",
+      "description": "",
       "generator": "secret"
     }
   },
