--- a/src/main/resources/application-heroku.yaml
+++ b/src/main/resources/application-heroku.yaml
@@ -1,10 +1,8 @@
-server:
-  port: 8080
 spring:
   datasource:
-    url: ${DATABASE_URL}
-    username: ${DATABASE_USERNAME}
-    password: ${DATABASE_PASSWORD}
+    url: ${JDBC_DATABASE_URL}
+    username: ${JDBC_DATABASE_USERNAME}
+    password: ${JDBC_DATABASE_PASSWORD}
   jpa:
     properties:
       hibernate:
