--- a/pom.xml
+++ b/pom.xml
@@ -68,10 +68,17 @@
         </dependency>
 
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-hikaricp</artifactId>
             <version>5.4.23.Final</version>
         </dependency>
+
 
 
         <dependency>
