--- a/src/main/resources/application-heroku.yaml
+++ b/src/main/resources/application-heroku.yaml
@@ -11,7 +11,7 @@ spring:
             non_contextual_creation: true
     hibernate:
       ## create ## can be changed to "update" if we don't want the data to be wiped on every restart
-      ddl-auto: create-drop
+      ddl-auto: update
     session:
       store-type: jdbc
       timeout:
